feat: save shared items to drive
